[gd_scene load_steps=3 format=2]

[ext_resource path="res://ConfigSlider.gd" type="Script" id=1]
[ext_resource path="res://theme/fonts/noto/type/type_body_strong.tres" type="DynamicFont" id=2]

[node name="ConfigSlider" type="VBoxContainer"]
margin_right = 300.0
margin_bottom = 527.0
script = ExtResource( 1 )

[node name="Labels" type="HBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 20.0

[node name="ConfigName" type="Label" parent="Labels"]
unique_name_in_owner = true
margin_right = 281.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Number of images to generate"
autowrap = true

[node name="ConfigValue" type="Label" parent="Labels"]
unique_name_in_owner = true
margin_left = 285.0
margin_right = 300.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 0 )
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 2

[node name="HSlider" type="HSlider" parent="."]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 300.0
margin_bottom = 36.0
mouse_filter = 1
min_value = 1.0
max_value = 20.0
value = 1.0

[connection signal="drag_ended" from="HSlider" to="." method="_on_HSlider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
